--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -16,7 +16,9 @@
 .NavigationItem a:hover,
 .NavigationItem a:active
 .NavigationItem a.active{
-    color: #40A4C8;
+    background-color:#8F5C2C;
+        border-bottom: 4px solid #40A4C8;
+        color: white;
 }
 
 @media (min-width:500px) {
