--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -8,9 +8,17 @@
     font-size: 1.2rem;
 }
 
+@media(max-width:500px){
+    .Burger {
+        margin-top: 10rem;
+        width: 250px;
+        height: 300px;
+    }
+}
+
 @media (min-width:500px) and (min-height:400px) {
     .Burger {
-        widows: 350px;
+        width: 300px;
         height: 300px;
     }
 }
